--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
    Bienvenido al covid 
    <h1>Este es un Encabezado</h1>
    <p>Este es un párrafo</p>
-   <picture>https://lh3.googleusercontent.com/proxy/Vwrtk8UZHlWYoWkaKvk9JsOqC2mLXLYs_t9DDqO2jz5Nss_Ll6Yq82cX8BwFfJ4Izt_1mpH2vbVpHRItW3pl0b-hKiVE6dHAsoT7629xGWabc9c4CSJF1E2p2txydUzp</picture>
+   
+    <img src="unnamed.png" alt="" srcset="">
+
 </body>
 </html>
