--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <h1>Este es un Encabezado</h1>
    <p>Este es un párrafo</p>
    
-    <img src="img/unnamed.png" alt="" srcset="">
+    <img src="img/ardilla.jpg" alt="" srcset="">
 
 </body>
 </html>
