--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
    Bienvenido al covid 
    <h1>Este es un Encabezado</h1>
    <p>Este es un párrafo</p>
-   
+    <h1 style="font-size:larger">Cuestionario</h1>
+    
 
 </body>
 </html>
