--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
    <h1>Este es un Encabezado</h1>
    <p>Este es un párrafo</p>
     <h1 style="font-size:larger">Cuestionario</h1>
-    
+    <img src="ardilla.jpg" alt="Ardilla" width="10em">
+
 
 </body>
 </html>
