--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     Mi primer vídeo: <br>
     <button>Aceptar Normas</button>
-    <input type="Suscribete y activa la campanita">
+    <input type="Suscribete y activa la campanita" value="Suscribir Brrr" >
     <p>Si te ha gustado el vídeo dame un like <kbd>(Y)</kbd>. Si no, <kbd>ALT+F4</kbd></p>
     <script>
         alert("Hola Mund@");
