Trabajo Final Sin ardilla

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   
-    <img src="ardilla.jpg" alt="Ardilla" width="500em">
     <br>
+    <img src="LogoCertus.jpg" alt="Certus" width="500em">
     <br>
 
  
