--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Este es un encabezado</h1>
     <p>Este es un parrafo</p>
-    <!-- Comentario 1-->
+    <!-- Comentario 1 -->
     <!-- Comentario 2 -->
     <!-- Comentario 3 -->
     <h1>Cabecera 1</h1>
@@ -21,5 +21,9 @@
     <h1>Cabecera 2</h1>
     <p>Parrafo 3</p>
     <p>Parrafo 4</p>
+    <br>
+    <br>
+    <li> <a href="Trabajo.html">Enlace 1</a></li>
+    
 </body>
 </html>
