--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <br>
     <br>
     <li> <a href="Trabajo.html">Enlace 1</a></li>
+    <li><a href="Trabajo2.html"></a></li>
     
 </body>
 </html>
