--- a/Trabajo2.html
+++ b/Trabajo2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <br>
-    <img src="logocertus.png" alt="Certus" width="160em">
+    <img src="LogoCertus.jpg" alt="Certus" width="120em">
     <br>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
