--- a/Trabajo2.html
+++ b/Trabajo2.html
@@ -10,6 +10,7 @@
     <title>Youtubers de Certus</title>
 </head>
 <body>
+    <img src="LogoCertus.jpg" alt="Certus" width="120em">
     Mi primer vídeo: <br>
     <button>SUSCRIBIR</button>
     <input type="Suscribete y activa la campanita" value="Mas información" >
