--- a/Trab_multimedia.html
+++ b/Trab_multimedia.html
@@ -11,7 +11,8 @@
         <source src="VideoDemo.mp4">
     </video>
     <br>
-    <iframe width="956" height="538" src="https://www.youtube.com/watch?v=LTIIM_g-HtQ" frameborder="0"></iframe>
+    <iframe width="956" height="538" src="https://www.youtube.com/watch?v=LTIIM_g-HtQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    ></iframe>
         
 
     
