--- a/gym.html
+++ b/gym.html
@@ -7,10 +7,10 @@
     <title>HERCULE´S GYM</title>
 </head>
 <body>
-<header>Bienvenidos a HERCULE´S GYM
-        <img src="HerculesLogo.jpg" alt="Hercules" width="50px" height="50px">
+<header>
+    <h1>Bienvenidos a HERCULE´S GYM <img src="HerculesLogo.jpg" alt="Hercules" width="50px" height="50px"></h1>
         <p>
-            <table>
+            <table border="2" width="100%"> 
                 <tr>
                     <th>Inicio</th>
                     <th>Registro</th>
@@ -21,5 +21,17 @@
             </table>
         </p>
 </header>
+<br>
+</body>
+<body>
+    <p>
+        <table>
+            <tr width="20%"> </tr>
+            <tr>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Aempr0QvAec" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </tr>
+            <tr width="20%"> </tr>
+        </table>
+    </p>
 </body>
 </html>
