--- a/gym.html
+++ b/gym.html
@@ -8,9 +8,15 @@
 </head>
 <body>
 <header>
-    <h1>Bienvenidos a HERCULE´S GYM <img src="HerculesLogo.jpg" alt="Hercules" width="50px" height="50px"></h1>
+    <h1>
+        <table>
+            <tr width="20%"></tr>
+            <tr width="60%">Bienvenidos a HERCULE´S GYM <img src="HerculesLogo.jpg" alt="Hercules" width="50px" height="50px"></tr>
+            <tr width="20%"></tr>
+        </table>
+    </h1>    
         <p>
-            <table border="2" width="100%"> 
+            <table border="2"  width="100%"> 
                 <tr>
                     <th>Inicio</th>
                     <th>Registro</th>
