--- a/gym.html
+++ b/gym.html
@@ -10,9 +10,9 @@
 <header>
     <h1>
         <table>
-            <tr width="20%"></tr>
+            <tr width="20%">.</tr>
             <tr width="60%">Bienvenidos a HERCULE´S GYM <img src="HerculesLogo.jpg" alt="Hercules" width="50px" height="50px"></tr>
-            <tr width="20%"></tr>
+            <tr width="20%">.</tr>
         </table>
     </h1>    
         <p>
@@ -32,11 +32,11 @@
 <body>
     <p>
         <table>
-            <tr width="20%"> </tr>
+            <tr width="20%">.</tr>
             <tr>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Aempr0QvAec" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </tr>
-            <tr width="20%"> </tr>
+            <tr width="20%">.</tr>
         </table>
     </p>
 </body>
