--- a/gym.html
+++ b/gym.html
@@ -39,5 +39,20 @@
             <tr width="20%">.</tr>
         </table>
     </p>
+    <br>
+    <p>
+        <h3>Informes</h3>
+        <h4>
+            Descubre las ventajas exclusivas para clientes Smart Fit
+
+Conoce Smart Fit Go, entrenamientos en vivo y clases on demand que puedes realizar donde y cuando quieras. Si eres cliente de Smart Fit es completamente GRATIS, sólo ingresa con tus accesos de Espacio del Cliente.
+        </h4>
+        <br>
+        <h4>Conoce nuestra aplicación
+
+            Descarga la app y consulta tu rutina completa, con videos explicativos de cada ejercicio, series y repeticiones. Además de acceso a Smart Fit Go.
+        </h4>
+
+    </p>
 </body>
 </html>
