--- a/gym.html
+++ b/gym.html
@@ -18,11 +18,23 @@
         <p>
             <table border="2"  width="100%"> 
                 <tr>
-                    <th>Inicio</th>
-                    <th>Registro</th>
-                    <th>Talleres</th>
-                    <th>Shop</th>
-                    <th>Horarios</th>
+                    <th><button>Inicio</button></th>
+                    <th>
+                        
+                            <main>
+                                <button>Registro</button>
+                                <label for="dni">DNI</label>
+                                <input type="radio" id="dni" name="tipo_documento" checked><br>
+                                <label for="pasaporte">Pasaporte</label>
+                                <input type="radio" id="pasaporte" name="tipo_documento"><br>
+                                <label for="otro">Otro</label>
+                                <input type="radio" id="otro" name="tipo_documento">
+                            </main>
+                        
+                    </th>
+                    <th><button>Talleres</button></th>
+                    <th><button>Shop</button></th>
+                    <th><button>Horarios</button></th>
                 </tr>
             </table>
         </p>
