--- a/Trabajo2.html
+++ b/Trabajo2.html
@@ -13,7 +13,7 @@
     <img src="LogoCertus.jpg" alt="Certus" width="120em">
     Mi primer vídeo: <br>
     <button>SUSCRIBIR</button>
-    <input type="Suscribete y activa la campanita" value="Mas información" >
+    <input type="password" placeholder="ingresar informacion" >
     <p>Si te ha gustado el vídeo dame un like <kbd>(Si)</kbd>. Si no, <kbd>(No)</kbd></p>
     <script>
         alert("Hola Mund@");
