--- a/JavaScript.html
+++ b/JavaScript.html
@@ -15,7 +15,7 @@
         //Muestra un mensaje de alerta
         window.alert("Bienvenido a Certus");
         //Escribe en la consola del navegador un mensaje
-        console.log("Mensaje en la consola del navegador")
+        console.log("Mensaje en la consola del navegador");
 
     </script>
 </body>
